0003 Added material collapse to the Skills and Non Technical Skill components

--- a/components/non-technical-skills/ntskills.module.css
+++ b/components/non-technical-skills/ntskills.module.css
@@ -15,8 +15,8 @@
     font-family: Roboto;
     display: grid;
     background: white;
-    width: 80%;
-    padding-left: 5%;
+    /*width: 80%;*/
+    padding-left: 2%;
     grid-template-columns: 15% repeat(4, auto);
     grid-template-rows: 5vh 20vh;
     grid-template-areas: "head head head head head"
