011 Added a re-usable work experience summary component

--- a/components/Modal/Modal.module.css
+++ b/components/Modal/Modal.module.css
@@ -2,20 +2,39 @@
     position: fixed;
     z-index: 500;
     background-color: white;
-    width: 100%;
+    width: 75%;
     border: 1px solid #ccc;
-    box-shadow: 1px 1px 1px black;
+    box-shadow: 1px 1px 10px black;
     padding: 16px;
     left: 15%;
     top: 10%;
     box-sizing: border-box;
     transition: all 0.3s ease-out;
+    border-radius:25px ;
 }
 
-
-@media (min-width: 600px) {
+@media (min-width: 670px) {
     .Modal {
-        width: 65%;
-        left: calc(40% - 250px);
+        position: fixed;
+        z-index: 500;
+        background-color: white;
+        width: 75%;
+        border: 1px solid #ccc;
+        box-shadow: 1px 1px 10px black;
+        padding: 16px;
+        left: 15%;
+        top: 10%;
+        box-sizing: border-box;
+        transition: all 0.3s ease-out;
+        border-radius: 25px;
     }
 }
+
+
+
+/*@media (min-width: 600px) {*/
+/*    .Modal {*/
+/*        width: 75%;*/
+/*        left: calc(30% - 250px);*/
+/*    }*/
+/*}*/
