--- a/components/layouts/Main.css
+++ b/components/layouts/Main.css
@@ -1,15 +1,10 @@
-
-/*
-  Color palette: http://www.colourlovers.com/palette/809495/sure
- */
-
-/*body {*/
-/*  margin: 0;*/
-/*  !*padding: 0;*!*/
-/*  font-family: 'Roboto', sans-serif;*/
-/*  !*color: #212121 !important;*!*/
-/*  !*overflow-x: hidden;*!*/
-/*}*/
+body {
+  margin: 0;
+  /*padding: 0;*/
+  font-family: 'Roboto', sans-serif;
+  /*color: #212121 !important;*/
+  /*overflow-x: hidden;*/
+}
 
 h3 {
   font-weight: 300;
